// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`File Based - Full Integration Tests NRSRx Sample Enum OData Microservice should generate files 1`] = `
[
  "char-types.enum.ts",
  "endpoints.ts",
  "index.ts",
  "item.model.ts",
  "item.properties.ts",
  "item.test-obj-fac.ts",
  "number-types.enum.ts",
]
`;

exports[`File Based - Full Integration Tests NRSRx Sample Enum OData Microservice should generate files: char-types.enum.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #enum.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { IEnumValue } from 'openapi-ts-generator/enums';

export enum CharTypes {
  Alpha = 'A',
  Beta = 'B',
  Gamma = 'C',
  Delta = 'D',
  Epsilon = 'E',
}

export enum CharTypeNames {
  ALPHA = 'Alpha',
  BETA = 'Beta',
  GAMMA = 'Gamma',
  DELTA = 'Delta',
  EPSILON = 'Epsilon',
}

export const charTypeValues : IEnumValue[] = [
  { key: 'A', name: 'Alpha', displayText: 'Alpha'},
  { key: 'B', name: 'Beta', displayText: 'Beta'},
  { key: 'C', name: 'Gamma', displayText: 'Gamma'},
  { key: 'D', name: 'Delta', displayText: 'Delta'},
  { key: 'E', name: 'Epsilon', displayText: 'Epsilon'},
];
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample Enum OData Microservice should generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum Endpoints {
  items = '/odata/v1/Items',
}
export interface IEndpoints {
  readonly items: string;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample Enum OData Microservice should generate files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #index.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export * from './char-types.enum';
export * from './item.model';
export * from './item.properties';
export * from './item.test-obj-fac';
export * from './number-types.enum';
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample Enum OData Microservice should generate files: item.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { NumberTypes } from './number-types.enum';
import { CharTypes } from './char-types.enum';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IItem {
  id?: string | null;
  name?: string;
  updateCount?: number | null;
  numberType?: NumberTypes | string;
  charType?: CharTypes | string;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample Enum OData Microservice should generate files: item.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* eslint-disable */
export enum ItemProperties {
  ID = 'id',
  NAME = 'name',
  UPDATE_COUNT = 'updateCount',
  NUMBER_TYPE = 'numberType',
  CHAR_TYPE = 'charType',
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample Enum OData Microservice should generate files: item.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { NumberTypes } from './number-types.enum';
import { CharTypes } from './char-types.enum';
import { ItemProperties } from './item.properties';

export function createTestItem() {
    return { 
      [ItemProperties.ID]: 'ID',
      [ItemProperties.NAME]: 'NAME',
      [ItemProperties.UPDATE_COUNT]: 0,
      [ItemProperties.NUMBER_TYPE]: NumberTypes.First,
      [ItemProperties.CHAR_TYPE]: CharTypes.Alpha,
    };
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Sample Enum OData Microservice should generate files: number-types.enum.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #enum.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { IEnumValue } from 'openapi-ts-generator/enums';

export enum NumberTypes {
  First = 1,
  Second = 2,
  Third = 3,
  Fourth = 4,
}

export enum NumberTypeNames {
  FIRST = 'First',
  SECOND = 'Second',
  THIRD = 'Third',
  FOURTH = 'Fourth',
}

export const numberTypeValues : IEnumValue[] = [
  { key: 1, name: 'First', displayText: 'First'},
  { key: 2, name: 'Second', displayText: 'Second'},
  { key: 3, name: 'Third', displayText: 'Third'},
  { key: 4, name: 'Fourth', displayText: 'Fourth'},
];
"
`;
